--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
+    id "org.jetbrains.dokka" version "1.5.30"
+}
+
 allprojects {
     repositories {
         google()
@@ -27,3 +32,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply from: "${rootDir}/scripts/publish-root.gradle"
