--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'androidx.navigation.safeargs'
-apply plugin: 'maven-publish'
 
 ext.kotlin_version = "1.4.0"
 ext.core_ktx_version = "1.3.2"
@@ -21,6 +20,14 @@ ext.browser_version = "1.2.0"
 ext.androidx_legacy_version = "1.0.0"
 ext.googleAuth_version = "17.0.0"
 
+ext {
+    PUBLISH_GROUP_ID = 'eu.genome.android'
+    PUBLISH_VERSION = '1.0.0'
+    PUBLISH_ARTIFACT_ID = 'sdk-payment'
+}
+
+apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -33,21 +40,10 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0.0"
+        versionName PUBLISH_VERSION
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-    }
-
-    productFlavors {
-//        prod {
-//            // TODO add real URL for prod
-//            buildConfigField "String", "BASE_URL", "\"https://gateway.genome.eu/api/cc\""
-//        }
-        dev {
-            buildConfigField "String", "BASE_URL", "\"https://gateway-sandbox.genome.eu/api/cc\""
-
-        }
     }
 
     buildTypes {
@@ -72,41 +68,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-}
-
-task sourceJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier "source"
-}
-
-publishing {
-    publications {
-        sdk(MavenPublication) {
-            groupId 'eu.genome.android'
-            artifactId 'sdk-payment'
-            version '1.0.0'
-            artifact(sourceJar)
-            artifact("$buildDir/outputs/aar/sdk-dev-release.aar")
-            pom.withXml {
-                def dependenciesNode = asNode().appendNode('dependencies')
-                //Iterate over the compile dependencies (we don't want the test ones), adding a <dependency> node for each
-                configurations.implementation.allDependencies.each {
-                    if(it.group != null && (it.name != null || "unspecified".equals(it.name)) && it.version != null)
-                    {
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
-                    }
-                }
-            }
-        }
-    }
-    repositories {
-        maven {
-            url "$buildDir/repo"
-        }
     }
 }
 
